# ggml

./: CMakeLists.txt
examples/gpt-2/: CMakeLists.txt  main-alloc.cpp
examples/simple/: CMakeLists.txt  matmul_test.c
modular_engine/: KaHIP.c  README.md  distrib.c  distrib.h  dummy_distrib.c  infos.md  model_compare.c  model_diff.c  parser.c  parser.h  parser_main.c  report-en.tex  report.tex  test.c  test_perf.c  visualizer.c
